Minor improvement to Files.writeToFile()...